# SPDX-FileCopyrightText: 2020 CERN
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(FisherPrice_Alpaka)
add_subdirectory(FisherPrice_cpp)
add_subdirectory(FisherPrice_cu)
add_subdirectory(Raytracer_Benchmark)
add_subdirectory(Example3)
add_subdirectory(field_cu)
add_subdirectory(Example5)
add_subdirectory(Example6)
add_subdirectory(Example7)
add_subdirectory(Example8)
add_subdirectory(Example9)
add_subdirectory(Example10)
add_subdirectory(Example11)
add_subdirectory(Example12)
add_subdirectory(Example13)
add_subdirectory(Example14)
add_subdirectory(Example16)
add_subdirectory(Example17)
add_subdirectory(Example18)
add_subdirectory(Example19)
add_subdirectory(Example20)
add_subdirectory(Example21)
add_subdirectory(TestEm3)
add_subdirectory(TestEm3MT)
add_subdirectory(TestEm3Compact)
add_subdirectory(TestEm3DoubleBuffer)
add_subdirectory(ECS)
