# SPDX-FileCopyrightText: 2020 CERN
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(FisherPrice_Alpaka)
add_subdirectory(FisherPrice_cpp)
add_subdirectory(FisherPrice_cu)
add_subdirectory(Raytracer_Benchmark)
add_subdirectory(Example1)
add_subdirectory(Example22)
add_subdirectory(Example23)
add_subdirectory(TestEm3)
add_subdirectory(TestEm3MT)
add_subdirectory(TestEm3Compact)
add_subdirectory(TestEm3DoubleBuffer)
